--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "@types/node": "^15.12.0",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "@types/react-router-dom": "^5.1.7",
     "googleapis": "^75.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-calendar-api": "^1.4.0",
     "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.34.1",
     "typescript": "^4.3.2",
